--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
             </div>
-
+        <button id="downloadResultsButton" class="hidden">Tải về kết quả đã xử lý</button>
         <button id="downloadErrorsButton" class="hidden">Tải về danh sách bài báo lỗi</button>
     </div>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
